Add Puzzle 1 for 2020-12-03

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(puzzle-01-01)
 add_subdirectory(puzzle-01-02)
 add_subdirectory(puzzle-02-01)
 add_subdirectory(puzzle-02-02)
+add_subdirectory(puzzle-03-01)
