--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(puzzle-01-02)
 add_subdirectory(puzzle-02-01)
 add_subdirectory(puzzle-02-02)
 add_subdirectory(puzzle-03-01)
+add_subdirectory(puzzle-03-02)
