--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory(puzzle-14-01)
 add_subdirectory(puzzle-14-02)
 add_subdirectory(puzzle-15-01)
 add_subdirectory(puzzle-15-02)
+add_subdirectory(puzzle-16-01)
