--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,4 @@ add_subdirectory(puzzle-18-02)
 add_subdirectory(puzzle-19-01)
 add_subdirectory(puzzle-19-02)
 add_subdirectory(puzzle-21-01)
+add_subdirectory(puzzle-21-02)
