--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,3 +46,4 @@ add_subdirectory(puzzle-19-02)
 add_subdirectory(puzzle-21-01)
 add_subdirectory(puzzle-21-02)
 add_subdirectory(puzzle-22-01)
+add_subdirectory(puzzle-22-02)
