--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,4 @@ add_subdirectory(puzzle-21-01)
 add_subdirectory(puzzle-21-02)
 add_subdirectory(puzzle-22-01)
 add_subdirectory(puzzle-22-02)
+add_subdirectory(puzzle-23-01)
