--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_subdirectory(puzzle-18-01)
 add_subdirectory(puzzle-18-02)
 add_subdirectory(puzzle-19-01)
 add_subdirectory(puzzle-19-02)
+add_subdirectory(puzzle-20-01)
 add_subdirectory(puzzle-21-01)
 add_subdirectory(puzzle-21-02)
 add_subdirectory(puzzle-22-01)
