--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,3 +51,5 @@ add_subdirectory(puzzle-22-01)
 add_subdirectory(puzzle-22-02)
 add_subdirectory(puzzle-23-01)
 add_subdirectory(puzzle-23-02)
+add_subdirectory(puzzle-24-01)
+add_subdirectory(puzzle-24-02)
